force-app/main/default/objects/Initiative__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <inlineHelpText>Only available to populate if the strategic area has the entity &apos;High Performance&apos;</inlineHelpText>
    <label>Activity ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HNSO35 (Funding for HP Investment)</fullName>
            </value>
            <value>
                <fullName>HNSO36 (NSO Capability Funding)</fullName>
            </value>
            <value>
                <fullName>PEGS35 (Grants to Individuals)</fullName>
            </value>
            <value>
                <fullName>PMSC1 (PM Scholarships - Coach)</fullName>
            </value>
            <value>
                <fullName>PMSO1 (PM Scholarships - Officials)</fullName>
            </value>
            <value>
                <fullName>PMSS9 (PM Scholarships - Support)</fullName>
            </value>
            <value>
                <fullName>PRM - no code</fullName>
            </value>
            <value>
                <fullName>TDEV78 (P2P Coach Development)</fullName>
            </value>
            <value>
                <fullName>TDEV79 (P2P Camps Athlete Subsidy)</fullName>
            </value>
            <value>
                <fullName>TDEV88 (P2P Individual Sport Tailoring)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>