force-app/main/default/objects/Initiative__c/fields/ActivityID__c.field-meta.xml
<CustomField>
    <fullName>ActivityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity ID</label>
    <referenceTo>Activity_ID__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>