force-app/main/default/objects/Initiative__c/fields/Base_High_Performance__c.field-meta.xml
<CustomField>
    <fullName>Base_High_Performance__c</fullName>
    <formula>Partner__r.Base_High_Performance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base High Performance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>