force-app/main/default/objects/Initiative__c/fields/BI_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>BI_Service_Area__c</fullName>
    <label>BI Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Solutions</fullName>
            </value>
            <value>
                <fullName>Finance and Corporate Services</fullName>
            </value>
            <value>
                <fullName>Governance and Planning</fullName>
            </value>
            <value>
                <fullName>Philanthropy and Commercial</fullName>
            </value>
            <value>
                <fullName>People and Culture</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Operational Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>