force-app/main/default/objects/Initiative__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Schedule</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>