force-app/main/default/objects/Initiative__c/fields/CheckForTrigger__c.field-meta.xml
<CustomField>
    <fullName>CheckForTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckForTrigger</label>
    <type>Checkbox</type>
</CustomField>