force-app/main/default/objects/Initiative__c/fields/Close_the_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Close_the_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close the Initiative</label>
    <type>Checkbox</type>
</CustomField>