force-app/main/default/objects/Initiative__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>