force-app/main/default/objects/Initiative__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Cost Centre must be selected before Payments can be made.  It is best to add it when creating an Initiative.</inlineHelpText>
    <label>Cost Centre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cost_Centre__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Cost_Centre__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>