force-app/main/default/objects/Initiative__c/fields/CS_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>CS_Focus_Area__c</fullName>
    <label>CS Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Young Girls (10 – 18)</fullName>
            </value>
            <value>
                <fullName>Young People (5 – 18) in lower socio economic urban areas (including Maori)</fullName>
            </value>
            <value>
                <fullName>Asian – Indian</fullName>
            </value>
            <value>
                <fullName>Asian – Chinese</fullName>
            </value>
            <value>
                <fullName>Asian – Other</fullName>
            </value>
            <value>
                <fullName>Pacifica – Samoan</fullName>
            </value>
            <value>
                <fullName>Pacifica – Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>