force-app/main/default/objects/Initiative__c/fields/CS_Strategic_Priority__c.field-meta.xml
<CustomField>
    <fullName>CS_Strategic_Priority__c</fullName>
    <label>CS Strategic Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insights – Demographics and trends</fullName>
            </value>
            <value>
                <fullName>Insights - Customer insight</fullName>
            </value>
            <value>
                <fullName>People - Workforce</fullName>
            </value>
            <value>
                <fullName>People - Coaching</fullName>
            </value>
            <value>
                <fullName>Spaces and Places - Facility Development</fullName>
            </value>
            <value>
                <fullName>Spaces and Places - Collaboration &amp; Partnerships</fullName>
            </value>
            <value>
                <fullName>Partners and Providers - Organisational Role &amp; Purpose</fullName>
            </value>
            <value>
                <fullName>Partners and Providers - Business Capability</fullName>
            </value>
            <value>
                <fullName>Partners and Providers - Partnering</fullName>
            </value>
            <value>
                <fullName>Partners/Providers - Provider Network</fullName>
            </value>
            <value>
                <fullName>Pathways - Physical Literacy</fullName>
            </value>
            <value>
                <fullName>Pathways - Talent Identification &amp; Development</fullName>
            </value>
            <value>
                <fullName>Pathways - Competition Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>