force-app/main/default/objects/Initiative__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <inlineHelpText>Payment with Status of &quot;Draft&quot;, &quot;Variation&quot;.</inlineHelpText>
    <label>Draft</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Draft, Variation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit, Payment, Refund, Payment Read Only, Credit Read Only, Refund Read Only</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>