force-app/main/default/objects/Initiative__c/fields/Expense_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Expense code must be selected before Payments can be made.  It is best to add it when creating an Initiative.</inlineHelpText>
    <label>Expense Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Expense_Code__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Expense_Code__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives_del</relationshipName>
    <type>Lookup</type>
</CustomField>