force-app/main/default/objects/Initiative__c/fields/Financial_Support__c.field-meta.xml
<CustomField>
    <fullName>Financial_Support__c</fullName>
    <label>Financial Support</label>
    <type>TextArea</type>
</CustomField>