force-app/main/default/objects/Initiative__c/fields/High_Performance__c.field-meta.xml
<CustomField>
    <fullName>High_Performance__c</fullName>
    <label>High Performance %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>