force-app/main/default/objects/Initiative__c/fields/Impact_Statement__c.field-meta.xml
<CustomField>
    <fullName>Impact_Statement__c</fullName>
    <label>Impact Statement</label>
    <type>TextArea</type>
</CustomField>