force-app/main/default/objects/Initiative__c/fields/Incomplete_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Requirements__c</fullName>
    <inlineHelpText>Number of related requirements with status &apos;Pending&apos; or &apos;Overdue&apos;</inlineHelpText>
    <label>Incomplete Requirements</label>
    <summaryFilterItems>
        <field>Requirement__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending, Overdue, Variation</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>