force-app/main/default/objects/Initiative__c/fields/Initiative_Development_Template__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Development_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter the Initiative Development Template that the Initiative relates to</description>
    <inlineHelpText>Enter the Initiative Development Template that the Initiative relates to</inlineHelpText>
    <label>Initiative Development Template</label>
    <referenceTo>Initiative_Development_Template__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>