force-app/main/default/objects/Initiative__c/fields/Initiative_ID__c.field-meta.xml
<CustomField>
    <fullName>Initiative_ID__c</fullName>
    <displayFormat>IN{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Initiative ID</label>
    <type>AutoNumber</type>
</CustomField>