force-app/main/default/objects/Initiative__c/fields/Initiative_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Initiative_ID_Link__c</fullName>
    <formula>HYPERLINK(Id,Initiative_ID__c, &quot;_self&quot;)</formula>
    <label>Initiative ID Link</label>
    <type>Text</type>
</CustomField>