force-app/main/default/objects/Initiative__c/fields/Initiative_Number__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Initiative Number</label>
    <type>AutoNumber</type>
</CustomField>