force-app/main/default/objects/Initiative__c/fields/Initiative_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>