force-app/main/default/objects/Initiative__c/fields/Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area__c</fullName>
    <label>Investment Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Investment_Area__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Investment_Area__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>