force-app/main/default/objects/Initiative__c/fields/Investment_Area_Available_Budget_Flag__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Available_Budget_Flag__c</fullName>
    <formula>image(if(Planned__c &gt; Investment_Area_Available_Budget__c ,$Setup.Icons__c.Orange__c,$Setup.Icons__c.Green__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Area</label>
    <type>Text</type>
</CustomField>