force-app/main/default/objects/Initiative__c/fields/Investment_Schedule_Variation__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_Variation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Schedule Variation</label>
    <referenceTo>Variation__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>