force-app/main/default/objects/Initiative__c/fields/Is_Initiative_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Initiative_Closed__c</fullName>
    <formula>OR( 
AND( 
NOT(ISPICKVAL(Type__c, &quot;Time &amp; Advice&quot;)), 
Total_Completed_Requirements__c = Total_Requirements__c, 
Pending_Measures__c = 0, 
Total_Payments__c = Total_Completed_Payments__c, 
Planned__c = Total_Amt_Payment__c 
), 
AND( 
ISPICKVAL(Type__c, &quot;Time &amp; Advice&quot;), 
Total_Completed_Requirements__c = Total_Requirements__c, 
Pending_Measures__c = 0 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Initiative Closed?</label>
    <type>Checkbox</type>
</CustomField>