force-app/main/default/objects/Initiative__c/fields/My_Initiative_Flag__c.field-meta.xml
<CustomField>
    <fullName>My_Initiative_Flag__c</fullName>
    <formula>IF( Initiative_Owner__r.Id = $User.Id , true, false)</formula>
    <label>My Initiative Flag</label>
    <type>Checkbox</type>
</CustomField>