force-app/main/default/objects/Initiative__c/fields/Non_Financial_Support__c.field-meta.xml
<CustomField>
    <fullName>Non_Financial_Support__c</fullName>
    <label>Non Financial Support</label>
    <type>TextArea</type>
</CustomField>