force-app/main/default/objects/Initiative__c/fields/NZ_Inc__c.field-meta.xml
<CustomField>
    <fullName>NZ_Inc__c</fullName>
    <label>NZ Inc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>