force-app/main/default/objects/Initiative__c/fields/Old_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Old_RecordTypeID__c</fullName>
    <label>Old RecordTypeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>