force-app/main/default/objects/Initiative__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Outcome_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Outcomes</valueSetName>
    </valueSet>
</CustomField>