force-app/main/default/objects/Initiative__c/fields/Outcome_Area__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Area__c</fullName>
    <label>Outcome Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC TEAM OUTCOMES</fullName>
                <label>BC Team Outcomes</label>
            </value>
            <value>
                <fullName>Commercial Outcomes</fullName>
            </value>
            <value>
                <fullName>Finance and Corporate Services Outcomes</fullName>
            </value>
            <value>
                <fullName>GOVERNANCE &amp; PLANNING OUTCOMES</fullName>
                <label>Governance &amp; Planning Outcomes</label>
            </value>
            <value>
                <fullName>People and Culture Outcomes</fullName>
            </value>
            <value>
                <fullName>Technology Outcomes</fullName>
            </value>
            <value>
                <fullName>Active Recreation​</fullName>
            </value>
            <value>
                <fullName>Insights and Evaluation​</fullName>
            </value>
            <value>
                <fullName>Leadership and Connectivity​</fullName>
            </value>
            <value>
                <fullName>Physical Education</fullName>
            </value>
            <value>
                <fullName>Play</fullName>
            </value>
            <value>
                <fullName>Spaces and Places​</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>