force-app/main/default/objects/Initiative__c/fields/Partner_Planning_Priority__c.field-meta.xml
<CustomField>
    <fullName>Partner_Planning_Priority__c</fullName>
    <label>Partner Planning Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>