force-app/main/default/objects/Initiative__c/fields/Partnership_Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Investment_Area__c</fullName>
    <label>Partnership Investment Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrity</fullName>
            </value>
            <value>
                <fullName>Leadership and Connectivity</fullName>
            </value>
            <value>
                <fullName>Spaces and Places</fullName>
            </value>
            <value>
                <fullName>Insights and Evaluation</fullName>
            </value>
            <value>
                <fullName>Play</fullName>
            </value>
            <value>
                <fullName>Active Recreation</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>