force-app/main/default/objects/Initiative__c/fields/Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>