force-app/main/default/objects/Initiative__c/fields/Payments_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Payments_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Scheduled</label>
    <type>Checkbox</type>
</CustomField>