force-app/main/default/objects/Initiative__c/fields/Pending_Measures__c.field-meta.xml
<CustomField>
    <fullName>Pending_Measures__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pending Measures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>