force-app/main/default/objects/Initiative__c/fields/Planned__c.field-meta.xml
<CustomField>
    <fullName>Planned__c</fullName>
    <inlineHelpText>Enter the dollar value that is planned for this Initiative.  (Just enter the numbers; you don&apos;t need to enter $-sign, commas, or cents.)  Payments for the Initiative cannot exceed this Planned amount.</inlineHelpText>
    <label>Planned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>