force-app/main/default/objects/Initiative__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Must
- We have agreed to commit resources to this initiative. It is important for overall success.
Should
- This initiative is a good idea, but we are not committing resources to it at this stage.  
We will undertake these Initiatives if there are sufficient resources. 
Could
 - This is the default status, used for logging ideas before they are reviewed and prioritised by the Partner Team. 
Wont
- This has been considered, and the Partner Team has agreed it will not be actioned at this stage.</description>
    <inlineHelpText>Must - Agreed to commit resource. Important for overall success.
Should - If there are sufficient resources we will commit.
Could - Idea logged before the review/prioritise process.
Wont - Partner team has agreed it will not be actioned at this stage.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Must</fullName>
            </value>
            <value>
                <fullName>Should</fullName>
            </value>
            <value>
                <fullName>Could</fullName>
            </value>
            <value>
                <fullName>Won&apos;t</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>