force-app/main/default/objects/Initiative__c/fields/Priority_Image__c.field-meta.xml
<CustomField>
    <fullName>Priority_Image__c</fullName>
    <formula>IF(isblank(text(Priority__c)),null,

IMAGE( 
CASE(Priority__c, 
&quot;Must&quot;, $Setup.Icons__c.Must__c,
&quot;Should&quot;, $Setup.Icons__c.Should__c ,
&quot;Could&quot;, $Setup.Icons__c.Could__c ,
&quot;Won&apos;t&quot;, $Setup.Icons__c.Wont__c ,
&quot;&quot;),&quot;&quot;)
)</formula>
    <label>Priority</label>
    <type>Text</type>
</CustomField>