force-app/main/default/objects/Initiative__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <inlineHelpText>Only available to populate if the strategic area has the entity &apos;High Performance&apos;</inlineHelpText>
    <label>Project ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HNSO-1 (Athletics)</fullName>
            </value>
            <value>
                <fullName>HNSO-2 (Netball)</fullName>
            </value>
            <value>
                <fullName>HNSO-3 (Basketball)</fullName>
            </value>
            <value>
                <fullName>HNSO-5 (Paralympics)</fullName>
            </value>
            <value>
                <fullName>HNSO-7 (Rowing)</fullName>
            </value>
            <value>
                <fullName>HNSO-9 (Yachting)</fullName>
            </value>
            <value>
                <fullName>HNSO-12 (Rugby Union)</fullName>
            </value>
            <value>
                <fullName>HNSO-13 (Football)</fullName>
            </value>
            <value>
                <fullName>HNSO-15 (Equestrian)</fullName>
            </value>
            <value>
                <fullName>HNSO-16 (Hockey - Men)</fullName>
            </value>
            <value>
                <fullName>HNSO-18 (Cycling)</fullName>
            </value>
            <value>
                <fullName>HNSO-19 (Triathlon)</fullName>
            </value>
            <value>
                <fullName>HNSO-20 (Swimming)</fullName>
            </value>
            <value>
                <fullName>HNSO-25 (Softball)</fullName>
            </value>
            <value>
                <fullName>HNSO-30 (Canoe Racing)</fullName>
            </value>
            <value>
                <fullName>HNSO-36 (Surf Lifesaving)</fullName>
            </value>
            <value>
                <fullName>HNSO-39 (Hockey - Women)</fullName>
            </value>
            <value>
                <fullName>HNSO-51 (Karate)</fullName>
            </value>
            <value>
                <fullName>HNSO-58 (Diving)</fullName>
            </value>
            <value>
                <fullName>HNSO-60 (Gymsports)</fullName>
            </value>
            <value>
                <fullName>HNSO-61 (International Taekwondo - non Olympic)</fullName>
            </value>
            <value>
                <fullName>HNSO-62 (Bowls)</fullName>
            </value>
            <value>
                <fullName>HNSO-63 (Boxing)</fullName>
            </value>
            <value>
                <fullName>HNSO-65 (Cricket)</fullName>
            </value>
            <value>
                <fullName>HNSO-71 (Golf)</fullName>
            </value>
            <value>
                <fullName>HNSO-76 (NZOC)</fullName>
            </value>
            <value>
                <fullName>HNSO-79 (Rugby League)</fullName>
            </value>
            <value>
                <fullName>HNSO-80 (Rugby Sevens - Women)</fullName>
            </value>
            <value>
                <fullName>HNSO-81 (Shooting)</fullName>
            </value>
            <value>
                <fullName>HNSO-83 (Rugby Sevens – Men)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>