force-app/main/default/objects/Initiative__c/fields/ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project ID</label>
    <referenceTo>Project_ID__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>