force-app/main/default/objects/Initiative__c/fields/Refunded__c.field-meta.xml
<CustomField>
    <fullName>Refunded__c</fullName>
    <label>Refunded</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Refund, Refund Read Only</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>