force-app/main/default/objects/Initiative__c/fields/Related_Measures_Are_Met__c.field-meta.xml
<CustomField>
    <fullName>Related_Measures_Are_Met__c</fullName>
    <label>Related Measures Are Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>