force-app/main/default/objects/Initiative__c/fields/RUL_Incomplete_Measures__c.field-meta.xml
<CustomField>
    <fullName>RUL_Incomplete_Measures__c</fullName>
    <label>Incomplete Measures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>