force-app/main/default/objects/Initiative__c/fields/Schedule_Payments_Check__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payments_Check__c</fullName>
    <formula>IF(Remaining__c &lt; 0, false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Payments Check</label>
    <type>Checkbox</type>
</CustomField>