force-app/main/default/objects/Initiative__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <inlineHelpText>Payments with status of &apos;Scheduled&apos;, &apos;Sent for Payment&apos;,&apos;On Hold&apos; or &apos;Error&apos;</inlineHelpText>
    <label>Scheduled</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled, On Hold, Sent for Payment, Error</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Payment, Credit, Refund, Payment Read Only, Credit Read Only, Refund Read Only</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>